solved some bugs

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -67,7 +67,27 @@
     ").to(device)\n",
     "\n",
     "# Load latest weights\n",
-    "model_path = latest_weights_file_path(config)\n",
+    "                     # Load model\n",
+    "model = build_transformer(\n",
+    "    tokenizer_src.get_vocab_size(),\n",
+    "    tokenizer_tgt.get_vocab_size(),\n",
+    "    config['seq_len'],\n",
+    "    config['seq_len'],\n",
+    "    d_model=config['d_model']\n",
+    ").to(device)\n",
+    "\n",
+    "# Try to find the latest weights file\n",
+    "try:\n",
+    "    model_path = latest_weights_file_path(config)\n",
+    "    if model_path is None:\n",
+    "        raise FileNotFoundError(\"No trained model weights found!\")\n",
+    "        \n",
+    "    state = torch.load(model_path, map_location=device)\n",
+    "    model.load_state_dict(state['model_state_dict'])\n",
+    "    print(f\"Loaded weights from {model_path}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error loading weights: {str(e)}\")\n",
+    "    print(\"Proceeding with untrained model\")\n",
     "if model_path is None:\n",
     "    raise FileNotFoundError(\"No trained model weights found!\")\n",
     "    \n",
